--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <button>New Grid</button>
       <div class="container"></div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
