Add id to the button to select it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Etch a Sketch</h1>
     <div class="main">
-      <button>New Grid</button>
+      <button id="new">New Grid</button>
       <div class="container"></div>
     </div>
     <script src="app.js"></script>
