--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <h1>Etch a Sketch</h1>
     <div class="main">
-      <button id="new">New Grid</button>
+      <div>
+        <button id="new">New Grid</button>
+        <button id="clear">Clear</button>
+      </div>
       <div class="container"></div>
     </div>
     <script src="app.js"></script>
